cluster/apps/selfhosted/ttrss/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ttrss
  namespace: default
  labels:
    app.kubernetes.io/name: ttrss
spec:
  replicas: 1
  strategy:
    # All existing Pods are killed before new ones are created
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ttrss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ttrss
    spec:
      securityContext:
        # container requires root to launch and then run as node user 1000
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
        runAsNonRoot: false
        readOnlyRootFilesystem: false
        allowPrivilegeEscalation: true
        capabilities:
          drop:
            - ALL
        # runAsNonRoot: true
        # runAsUser: 1000
        # runAsGroup: 1000
        # fsGroup: 1000
        # fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: ttrss-data
          persistentVolumeClaim:
            claimName: ttrss-data

      containers:
        - name: ttrss
          image: wangqiru/ttrss:latest-2022-08-07
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          volumeMounts:
            - name: ttrss-data
              mountPath: /var/www/feed-icons
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
