cluster/apps/selfhosted/ttrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ttrss
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 181
  selector:
    app.kubernetes.io/name: ttrss
  type: ClusterIP
