cluster/apps/selfhosted/ttrss/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttrss
  namespace: default
spec:
  rules:
    - host: &host "rss.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ttrss
                port:
                  number: 80
  tls:
    - hosts:
        - *host
